--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,16 +1,4 @@
-$calendar-cell-width: 100px;
-$calendar-padding: 10px;
-$gap-width: 1px;
-$calendar-width: $calendar-cell-width * 7 + $gap-width * 6 + 20px;
-$day-of-week: (
-  "mon": 7,
-  "tue": 6,
-  "wed": 5,
-  "thu": 4,
-  "fri": 3,
-  "sat": 2,
-  "sun": 1,
-);
+@import 'variables/variables.scss';
 
 * {
   box-sizing: border-box;
