--- a/src/styles/days/calendar.scss
+++ b/src/styles/days/calendar.scss
@@ -19,6 +19,7 @@ $max-width: ($day-size + $border-width + $padding) * $calendar-width + 2 * $padd
     border: $border-width solid #000;
     justify-content: center;
     align-items: center;
+    transition: background-color 0.5s, transform 0.5s;
 
     &:hover {
       background-color: pink;
@@ -27,16 +28,16 @@ $max-width: ($day-size + $border-width + $padding) * $calendar-width + 2 * $padd
     }
   }
 
-  @for $day from 1 through 31 {
-    :nth-child(n + #{$day})::before {
-      content: "#{$day}" ;
+  @for $days from 1 through 31 {
+    :nth-child(n + #{$days})::before {
+      content: "#{$days}";
       font-size: 30px;
     }
   }
 
-  @each $day, $col in $days {
-    &--start-day-#{$day} {
-      &__day:first-child {
+  @each $days, $col in $days {
+    &--start-day-#{$days} {
+      .calendar__day:first-child {
         margin-left: ($day-size * $col) + $col * 1px;
       }
     }
@@ -44,7 +45,7 @@ $max-width: ($day-size + $border-width + $padding) * $calendar-width + 2 * $padd
 
   @each $length in 28, 29, 30, 31 {
     &--month-length-#{$length} {
-      &__day:nth-child(n+#{$length + 1}) {
+      .calendar__day:nth-child(n+#{$length + 1}) {
         display: none;
       }
     }
