add task solution

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -37,7 +37,7 @@
   @each $day, $i in $daysOfWeek {
     &--start--day--#{$day} {
       .calendar__day:first-child {
-        margin-left: (($gap + $size) * ($column - 1));
+        margin-left: (($gap + $size) * 6);
       }
     }
   }
