add task solution

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   gap: $gap;
   flex-wrap: wrap;
-  width: calc($column * #{$size} + 2 * #{$padding});
+  width: calc(7 * #{$size} + 2 * #{$padding});
   padding: $padding;
 
   &__day {
