--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,11 @@
 body {
   margin: 0;
+  background: #ccc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
+
+@import "./utils/variables.scss";
+@import "./blocks/calendar.scss";
