--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -36,16 +36,16 @@
   }
 
   @each $start-day, $val in $days {
-    .calendar--start-day-#{$start-day} {
+    &--start-day-#{$start-day} {
       .calendar__day:first-child {
         margin-left: (100px * $val) + $val * 1px;
       }
     }
   }
 
-  @each $lenght in 28,29,30,31 {
-    .calendar--month-lenght-#{$lenght} {
-      .calendar__day:nth-child(#{$lenght + 1}) {
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} {
+      .calendar__day:nth-child(n + #{$i + 1}) {
         display: none;
       }
     }
