add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,17 @@
+@import "./utility/variables.scss";
+
 body {
   margin: 0;
+  background: url("../images/background.jpg");
 }
+
+.wrapper {
+  box-sizing: border-box;
+  padding: 20px 0;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@import "./blocks/calendar.scss";
