--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -6,21 +6,19 @@
   gap: $days-gap;
   background-color: #fff;
 
-  @each $day, $dayNum in
-    ("mon": 0, "tue": 1, "wed": 2, "thu": 3, "fri": 4, "sat": 5, "sun": 6) {
-    &__start-day--#{$day} &__day--day--1 {
+  @each $day, $dayNum in $weekDays {
+    &--start-day--#{$day} &__day:nth-child(1) {
       margin-left: $dayNum*($day-size + $days-gap);
     }
   }
 
   @for $numDays from 28 through 31 {
-    &__month-length--#{$numDays} :nth-child(n+#{$numDays+1}) {
+    &--month-length--#{$numDays} :nth-child(n+#{$numDays+1}) {
       display: none;
     }
   }
 
   &__day {
-    position: relative;
     display: flex;
     border: 1px solid black;
     box-sizing: border-box;
@@ -34,10 +32,8 @@
     transition-property: background-color, transform;
 
     @for $day from  1 through 31 {
-      &--day--#{$day}::before {
+      &:nth-child(#{$day})::before {
         content: "#{$day}";
-        font-size: 30px;
-        font-family: Arial, Helvetica, sans-serif;
       }
     }
 
