--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -20,12 +20,6 @@
       transform: translateY(-20px);
     }
 
-    @each $day, $number in $days {
-      &--start-day--#{$day} {
-        margin-left: ($day-size + $calendar-gap) * $number;
-      }
-    }
-
     @for $n from 1 through 31 {
       &:nth-child(#{$n})::before {
         content: "#{$n}";
@@ -34,6 +28,13 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+      }
+    }
+  }
+  @each $day, $number in $days {
+    &--start-day--#{$day} {
+      .calendar__day:first-child {
+        margin-left: ($day-size + $calendar-gap) * $number;
       }
     }
   }
