add task solution

--- a/src/styles/modifiers/modifiers.scss
+++ b/src/styles/modifiers/modifiers.scss
@@ -5,17 +5,13 @@
 }
 
 @each $day, $day-index in $day-map {
-  &--start-day-#{$day} {
-    .calendar__day {
-      &:nth-child(#{$day-index}n + 1) {
-        margin-left: 0;
-      }
-    }
+  &--start-day--#{$day} :first-child {
+    margin-left: (($gap + $cell-size) * $day-index);
   }
 }
 
 @for $i from 28 through 31 {
-  &.calendar--month-length-#{$i} {
+  &.calendar--month-length--#{$i} {
     .calendar__day:nth-child(n + #{$i + 1}) {
       display: none;
     }
