--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -4,11 +4,12 @@ $font-size: 30px;
 $animation-duration: 0.5s;
 $hover-translate: 20px;
 $day-map: (
-  mon: 1,
-  tue: 2,
-  wed: 3,
-  thu: 4,
-  fri: 5,
-  sat: 6,
-  sun: 7
+  mon: 0,
+  tue: 1,
+  wed: 2,
+  thu: 3,
+  fri: 4,
+  sat: 5,
+  sun: 6
 );
+$gap: 1px;
