add task solution

--- a/src/styles/modifiers/modifiers.scss
+++ b/src/styles/modifiers/modifiers.scss
@@ -5,7 +5,7 @@
 }
 
 @each $day, $day-index in $day-map {
-  &--start-day--#{$day} :first-child {
+  .calendar--start-day--#{$day} :first-child {
     margin-left: (($gap + $cell-size) * $day-index);
   }
 }
