--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,15 @@
+@import "./variables.scss";
+@import "./calendar.scss";
+
 body {
   margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: $font-size;
+  box-sizing: border-box;
+}
+
+main {
+  display: flex;
+  justify-content: center;
 }
