--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,3 +8,4 @@ $border-size: 1px;
 $days-of-week: 1 mon, 2 tue, 3 wed, 4 thu, 5 fri, 6 sat, 7 sun;
 
 $hover-color: pink;
+$background-color-day: #eee;
