--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,7 +5,7 @@ body {
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  margin: 100px auto;
+  margin: auto;
 
   gap: $gap;
   width: $calendar-frame-size;
@@ -16,7 +16,7 @@ body {
     height: $calendar-box-size;
     width: $calendar-box-size;
     line-height: $calendar-box-size;
-    
+
     border: 1px solid black;
     background-color: #eee;
     transition: background-color, transform 0.5s;
@@ -47,7 +47,7 @@ body {
 
   @for $i from 28 through 31 {
     &--month-length--#{$i} {
-      &:nth-child(n + #{$i + 1}) {
+      .calendar__day:nth-child(n + #{$i + 1}) {
         display: none;
       }
     }
