--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,7 +5,11 @@ body {
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  margin: auto;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
   gap: $gap;
   width: $calendar-frame-size;
