--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,12 +1,12 @@
+/* stylelint-disable no-descending-specificity */
+/* stylelint-disable length-zero-no-unit */
 /* stylelint-disable rule-empty-line-before */
-/* stylelint-disable max-line-length */
-/* stylelint-disable selector-list-comma-newline-after */
 .main-container {
   display: flex;
   justify-content: center;
 }
 
-.calendar, .calendar--start-sun, .calendar--start-sat, .calendar--start-fri, .calendar--start-thu, .calendar--start-wed, .calendar--start-tue, .calendar--start-mon {
+.calendar {
   display: flex;
   flex-wrap: wrap;
   width: 734px;
@@ -14,6 +14,39 @@
   gap: 1px;
   background-color: white;
   cursor: default;
+}
+.calendar--start-mon > :first-child {
+  margin-left: 0px;
+}
+.calendar--start-tue > :first-child {
+  margin-left: 103px;
+}
+.calendar--start-wed > :first-child {
+  margin-left: 206px;
+}
+.calendar--start-thu > :first-child {
+  margin-left: 309px;
+}
+.calendar--start-fri > :first-child {
+  margin-left: 412px;
+}
+.calendar--start-sat > :first-child {
+  margin-left: 515px;
+}
+.calendar--start-sun > :first-child {
+  margin-left: 618px;
+}
+.calendar--month-length-28 .calendar__cell:nth-child(n+29) {
+  display: none;
+}
+.calendar--month-length-29 .calendar__cell:nth-child(n+30) {
+  display: none;
+}
+.calendar--month-length-30 .calendar__cell:nth-child(n+31) {
+  display: none;
+}
+.calendar--month-length-31 .calendar__cell:nth-child(n+32) {
+  display: none;
 }
 .calendar__cell {
   width: 100px;
@@ -24,6 +57,9 @@
   align-items: center;
   justify-content: center;
   position: relative;
+}
+.calendar__cell__cell:nth-child(n+1) {
+  counter-increment: day;
 }
 .calendar__cell::before {
   content: counter(day);
@@ -39,7 +75,4 @@
   background-color: pink;
   transform: translateY(-20px);
   transition: transform 0.5s ease;
-}
-.calendar__cell:nth-child(n+1) {
-  counter-increment: day;
 }/*# sourceMappingURL=main.css.map */
