--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,7 +6,7 @@ $gap: 1px;
 $padding: 10px;
 $days-in-week: 7;
 $animation-duration: 0.5s;
-$start-days: mon, tue, wed, thu, fri, sat, sun;
+$start-days: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
 
 .main-container {
   display: flex;
@@ -22,6 +22,20 @@ $start-days: mon, tue, wed, thu, fri, sat, sun;
   background-color: white;
   cursor: default;
 
+  @each $day, $order in $start-days {
+    &--start-#{$day} > :first-child {
+      margin-left: $order * ($cell-size + $border-width * 2 + $gap);
+    }
+  }
+
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} {
+      .calendar__cell:nth-child(n + #{$i + 1}) {
+        display: none;
+      }
+    }
+  }
+
   &__cell {
     width: $cell-size;
     height: $cell-size;
@@ -31,6 +45,10 @@ $start-days: mon, tue, wed, thu, fri, sat, sun;
     align-items: center;
     justify-content: center;
     position: relative;
+
+    &__cell:nth-child(n + 1) {
+      counter-increment: day;
+    }
 
     &::before {
       content: counter(day);
@@ -49,16 +67,4 @@ $start-days: mon, tue, wed, thu, fri, sat, sun;
       transition: transform $animation-duration ease;
     }
   }
-
-  @each $day in $start-days {
-    &--start-#{$day} {
-      @extend .calendar;
-      @extend .calendar--start-#{$day};
-    }
-  }
-}
-
-.calendar__cell:nth-child(n + 1) {
-  counter-increment: day;
-
 }
