--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,14 +1,12 @@
 $day-size: 100px;
-$border-color: #000;
-$day-background-color: #eee;
+$color-background-day: #eee;
 $font-size: 30px;
-// $font-family: Arial, Helvetica, sans-serif;
 $gap: 1px;
 $calendar-padding: 10px;
-$day-border-features: 1px solid $border-color;
+$day-border-features: 1px solid #000;
 $hover-offset--vertical-distance:-20px;
 $hover-transition-reaction: 0.5s;
-$hover-day-background-color: pink;
+$color-day-background-hover: pink;
 $month-length: 30;
 $calendar-width: calc(7 * #{$day-size} + 6 * #{$gap} );
 $daysData:
@@ -17,5 +15,5 @@ $daysData:
   "wed" 2,
   "thu" 3,
   "fri" 4,
-  "sut" 5,
+  "sat" 5,
   "sun" 6;
