corrected task solution

--- a/src/styles/calendar/calendar.scss
+++ b/src/styles/calendar/calendar.scss
@@ -1,12 +1,16 @@
 .calendar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 20px auto;
   padding: 10px;
   width: $calendar-width;
-  display: flex;
   gap: $gap-size;
   flex-wrap: wrap;
 
   &__day {
+    box-sizing: border-box;
+    display: flex;
     position: relative;
     height: $day-size;
     width: $day-size;
@@ -15,8 +19,8 @@
     cursor: pointer;
     transition: 0.5s;
 
-    text-align: center;
-    line-height: 100px;
+    justify-content: center;
+    align-items: center;
 
     &:hover {
       background-color: pink;
