--- a/src/styles/functions.scss
+++ b/src/styles/functions.scss
@@ -1,5 +1,5 @@
 @use "variables";
 
-@function getStartDayMarginLeft($startDayNumer, $gap, $cell-size) {
-  @return calc(#{$startDayNumer} * (#{$gap} + #{$cell-size}));
+@function getStartMargin($startDayNumer, $gap, $cellSize) {
+  @return calc(#{$startDayNumer} * (#{$gap} + #{$cellSize}));
 }
