--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,14 +1,8 @@
-$day-size: 100px;
-$color-background-day: #eee;
-$font-size: 30px;
+$daySize: 100px;
 $gap: 1px;
-$calendar-padding: 10px;
-$day-border-features: 1px solid #000;
-$hover-offset--vertical-distance:-20px;
-$hover-transition-reaction: 0.5s;
-$color-day-background-hover: pink;
-$month-length: 30;
-$calendar-width: calc(7 * #{$day-size} + 6 * #{$gap} );
+$calendarPadding: 10px;
+$monthLength: 29;
+$calendarWidth: calc(7 * #{$daySize} + 6 * #{$gap} + 2 * #{$calendarPadding});
 $daysData:
   "mon" 0,
   "tue" 1,
