add task solution

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -39,16 +39,13 @@ body {
 
     &:hover {
       cursor: pointer;
-    }
-
-    &:active {
       background-color: pink;
       transform: translate(0, -20px);
     }
   }
 
   @each $day, $mesure in $weekDays {
-    &--start-day_#{$day} :first-child {
+    &--start-day-#{$day} :first-child {
       margin-left: $mesure;
     }
   }
