corrected task solution

--- a/src/styles/calendar/variables.scss
+++ b/src/styles/calendar/variables.scss
@@ -1,4 +1,6 @@
 $day-size: 100px;
+$day-color: #eee;
+$hover-color: pink;
 $gap-size: 1px;
 $calendar-width: (7 * $day-size) + (6 * $gap-size);
 $weekdays:
