--- a/src/styles/calendar/calendar.scss
+++ b/src/styles/calendar/calendar.scss
@@ -1,6 +1,5 @@
 .calendar {
   display: flex;
-  justify-content: center;
   align-items: center;
   margin: 20px auto;
   padding: 10px;
@@ -14,7 +13,7 @@
     position: relative;
     height: $day-size;
     width: $day-size;
-    background-color: #eee;
+    background-color: $day-color;
     border: 1px solid #000;
     cursor: pointer;
     transition: 0.5s;
@@ -23,7 +22,7 @@
     align-items: center;
 
     &:hover {
-      background-color: pink;
+      background-color: $hover-color;
       transform: translateY(-20px);
     }
 
