--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -58,7 +58,7 @@
   justify-content: center;
   position: relative;
 }
-.calendar__cell__cell:nth-child(n+1) {
+.calendar__cell:nth-child(n+1) {
   counter-increment: day;
 }
 .calendar__cell::before {
