--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -46,7 +46,7 @@ $start-days: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
     justify-content: center;
     position: relative;
 
-    &__cell:nth-child(n + 1) {
+    &:nth-child(n + 1) {
       counter-increment: day;
     }
 
