--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,72 @@
+$day-size: 100px;
+$gap: 1px;
+
 body {
   margin: 0;
+  padding: 0;
 }
+
+.celendar {
+  display: flex;
+  margin: auto;
+  width: 707px;
+  font-family: Arial, Helvetica, sans-serif;
+
+  &__month {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap:1px
+  }
+
+  &__day {
+    box-sizing: border-box;
+   display: inline-block;
+   flex-shrink: 0;
+   width: 100px;
+   height: 100px;
+   background-color: #eee;
+   border: 1px solid #000;
+   font-size: 30px;
+   text-align: center;
+   line-height: 100px;
+   cursor: pointer;
+   transition: transform 0.5s;
+
+   &:hover {
+    background-color: #ffc0cb;
+    transform:translateY(-20px);
+   }
+  }
+
+  @for $numb from 1 through 31 {
+   &__day:nth-child(#{$numb}):before{
+     content: '#{$numb}';
+   }
+  }
+
+}
+
+$start-days: (
+  "mon": 0,
+  "tue": 1,
+  "wed": 2,
+  "thu": 3,
+  "fri": 4,
+  "sat": 5,
+  "sun": 6
+);
+
+@each $name, $value in $start-days {
+  .celendar--start-day-#{$name} .celendar__day:first-child {
+    margin-left: ($day-size + $gap) * $value;
+  }
+}
+
+@for $i from 28 through 31 {
+  .celendar--month-length-#{$i} .celendar__day:nth-child(n + #{$i + 1}) {
+    display: none;
+  }
+}
+
