--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -1,6 +1,10 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
   margin: 0;
-  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar {
@@ -36,12 +40,10 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
-    box-sizing: border-box;
     width: $daySize;
     height: $daySize;
     border: 1px solid #000;
     background-color: #eee;
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
     transition: transform 500ms,
       background-color 500ms;
