--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -51,8 +51,11 @@ body {
   }
 }
 
-@for $num from 1 through 31 {
-  .calendar__day:nth-child(n + #{$num})::before {
+@for $num from 1 through 30 {
+  // .calendar__day:nth-child(n + #{$num})::before {
+  //   content: "#{$num + 1}";
+  // }
+  .calendar__day:nth-child(#{$num})::before {
     content: "#{$num}";
   }
 }
