--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,10 +1,3 @@
-$cell-side-size: 100px;
-$gap-width-between-cells: 1px;
-$weekdays:
-  mon 0,
-  tue $cell-side-size + $gap-width-between-cells,
-  wed ($cell-side-size + $gap-width-between-cells) * 2,
-  thu ($cell-side-size + $gap-width-between-cells) * 3,
-  fri ($cell-side-size + $gap-width-between-cells) * 4,
-  sat ($cell-side-size + $gap-width-between-cells) * 5,
-  sun ($cell-side-size + $gap-width-between-cells) * 6;
+$cell-side: 100px;
+$cell-side-and-gap: $cell-side + 1;
+$weekDays: ("mon", "tue", "wed", "thu", "fri", "sat", "sun");
