add task solution

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -24,8 +24,8 @@ body {
   padding: $calendar-padding;
 
   &--month-length {
-    @for $month-length from 28 through $month-length {
-      &--#{$month-length}>:nth-child(n + #{$month-length + 1}) {
+    @for $dayAmount from 28 through 31 {
+      &--#{$dayAmount}>:nth-child(n + #{$dayAmount + 1}) {
         display: none;
       }
     }
