--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,6 @@
-body {
-  margin: 0;
-}
+@import "./utils/functions";
+@import "./utils/mixins";
+@import "./utils/variables";
+
+@import "./blocks/calendar.scss";
+@import "./blocks/reset.scss";
