--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,4 @@
-$day-size: 100px;
-$space-between-days: 1px;
-$calendar-padding: 10px;
-$calendar-width:
-  7 * ($day-size + $space-between-days) - 1 + 2 * $calendar-padding;
-$days: ("mon": 1, "tue": 2, "wed": 3, "thu": 4, "fri": 5, "sat": 6, "sun": 7);
+@import "./utils/variables";
 
 * {
   box-sizing: border-box;
@@ -45,8 +40,8 @@ body {
     }
   }
 
-  @for $d from 1 to 32 {
-    &__day-#{$d} {
+  @for $day from 1 to 32 {
+    &__day-#{$day} {
       background-color: #eee;
       width: $day-size;
       height: $day-size;
@@ -55,16 +50,16 @@ body {
       justify-content: center;
       align-items: center;
       font-size: 30px;
+      transition-duration: 0.5s;
 
       &::before {
-        content: "#{$d}";
+        content: "#{$day}";
       }
 
       &:hover {
         cursor: pointer;
         background-color: pink;
         transform: translate(0, -20px);
-        transition-duration: 0.5s;
       }
     }
   }
