--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,7 +24,7 @@ body {
     background-color: #eee;
     border: 1px solid #000;
 
-    opacity: 0;
+    opacity: 1;
     transition: all 0.5s ease 0.3s;
 
     @for $dayNum from 1 through $days-in-month {
@@ -44,23 +44,23 @@ body {
   }
 
   $weekDays:
-    mon 0,
-    tue ($calendar-width - 6 * ($cell-size + $calendar-gap)),
-    wed ($calendar-width - 5 * ($cell-size + $calendar-gap)),
-    thu ($calendar-width - 4 * ($cell-size + $calendar-gap)),
-    fri ($calendar-width - 3 * ($cell-size + $calendar-gap)),
-    sat ($calendar-width - 2 * ($cell-size + $calendar-gap)),
-    sun ($calendar-width - ($cell-size + $calendar-gap));
+    mon 7,
+    tue 6,
+    wed 5,
+    thu 4,
+    fri 3,
+    sat 2,
+    sun 1;
 
   @each $weekDay, $margin in $weekDays {
     &--start-day--#{$weekDay} &__day:first-child {
-      margin-left: $margin;
+      margin-left: $calendar-width - $margin * ($cell-size + $calendar-gap);
     }
   }
 
-  @for $day from 1 through $days-in-month {
-    &--month-length--#{$days-in-month} &__day:nth-child(#{$day}) {
-      opacity: 1;
+  @for $day from 28 through 31 {
+    &--month-length--#{$day} &__day:nth-child(n + #{$day + 1}) {
+      opacity: 0;
     }
   }
 }
