add task solution

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -51,17 +51,14 @@ body {
   }
 }
 
-@for $num from 1 through 30 {
-  // .calendar__day:nth-child(n + #{$num})::before {
-  //   content: "#{$num + 1}";
-  // }
+@for $num from 1 through 31 {
   .calendar__day:nth-child(#{$num})::before {
     content: "#{$num}";
   }
 }
 
-@for $length from 29 through 32 {
-  .month-length-#{$length} :nth-child(n + #{$length}) {
+@for $length from 28 through 31 {
+  .calendar--month-length-#{$length} :nth-child(n + #{$length + 1}) {
     display: none;
   }
 }
