add task solution

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -17,11 +17,11 @@ body {
   width: 708px;
   gap: #{$gap-size};
 
-  @for $length from 29 through 32 {
-    &--month-length-#{$length} :nth-child(n + #{$length}) {
-      display: none;
-    }
-  }
+  // @for $length from 29 through 32 {
+  //   &--month-length-#{$length} :nth-child(n + #{$length}) {
+  //     display: none;
+  //   }
+  // }
 
   &__day {
     display: flex;
