add variable file

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,4 @@
-$cell-size: 100px;
-$calendar-gap: 1px;
-$calendar-width: 7 * ($cell-size + $calendar-gap);
-$days-in-month: 31;
+@import "./variables";
 
 body {
   margin: 0;
@@ -42,15 +39,6 @@ body {
       transform: translateY(-20px);
     }
   }
-
-  $weekDays:
-    mon 7,
-    tue 6,
-    wed 5,
-    thu 4,
-    fri 3,
-    sat 2,
-    sun 1;
 
   @each $weekDay, $margin in $weekDays {
     &--start-day--#{$weekDay} &__day:first-child {
