add task solution

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -11,16 +11,15 @@
     align-items: center;
     width: $size__box-day;
     height: $size__box-day;
-    font-size: 30px;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #eee;
     border: 1px solid #000;
     box-sizing: border-box;
-    transition: transform $time-transition ease-in;
+
+    transition: all $time-transition ease-in;
 
     &:hover {
       transform: translateY(-20px);
       background-color: $hover-background-color;
+      border-radius: 20%;
       cursor: pointer;
     }
   }
