--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,4 +7,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+
+  font-size: 30px;
+  background-color: #eee;
+  font-family: Arial, Helvetica, sans-serif;
 }
