add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,4 @@
-@import "blocks/calendar";
-@import "blocks/page";
+@import "./utils/variables";
 
-
-
-
+@import "./blocks/calendar";
+@import "./blocks/page";
