--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -3,8 +3,24 @@
   flex-wrap: wrap;
   gap: 1px;
 
-  margin: 0 auto;
+  margin: 40px auto 0;
   max-width: 707px;
+
+  @each $day, $value in $start-days {
+    &--start-day-#{$day} {
+      .calendar__date:first-child {
+        margin-left: calc((100px + 1px) * #{$value});
+      }
+    }
+  }
+
+  @for $month-length from 28 through 31 {
+    &--month-length-#{$month-length} {
+      .calendar__date:nth-child(n + #{$month-length + 1}) {
+        display: none;
+      }
+    }
+  }
 
   &__date {
     position: relative;
@@ -34,22 +50,6 @@
       cursor: pointer;
       background-color: pink;
       transform: translateY(-20px);
-    }
-
-    $start-days: ("mon": 0, "tue": 1, "wed": 2, "thu": 3, "fri": 4, "sat": 5, "sun": 6);
-
-    @each $day, $value in $start-days {
-      &--start-day-#{$day} {
-        margin-left: calc((100px + 1px) * #{$value});
-      }
-    }
-  }
-}
-
-@for $month-length from 28 through 31 {
-  .calendar--month-length-#{$month-length} {
-    .calendar__date:nth-child(n + #{$month-length + 1}) {
-      display: none;
     }
   }
 }
