--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -2,30 +2,28 @@
   display: flex;
   flex-wrap: wrap;
   gap: 1px;
-
   width: 750px;
   padding: 10px;
 
   &__day {
-    height: 98px;
-    width: 98px;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    height: 100px;
+    width: 100px;
     border: 1px solid black;
-
     background-color: #eee;
-
+    list-style-type: none;
     transition: background-color 0.5s, transform 0.5s;
 
     @for $i from 1 through 31 {
       &:nth-child(#{$i})::before {
         content: "#{$i}";
-        display: flex;
-        justify-content: center;
-        line-height: 100px;
       }
     }
 
-    $start-day: "mon" 0, "tue" 101px, "wed" 202px, "thu" 303px "fri" 404px,
+    $start-day: "mon" 0, "tue" 101px, "wed" 202px, "thu" 303px, "fri" 404px,
       "sat" 505px, "sun" 606px;
 
     @each $day, $margin in $start-day {
