--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-@use "./blocks/calendar.scss";
+@import "./blocks/calendar.scss";
 
 html {
   font-family: Arial, Helvetica, sans-serif;
@@ -9,56 +9,5 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-
   margin: 0;
-}
-
-.calendar {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1px;
-
-  width: 750px;
-  padding: 10px;
-
-  &__day {
-    height: 98px;
-    width: 98px;
-
-    border: 1px solid black;
-
-    background-color: #eee;
-
-    transition: background-color 0.5s, transform 0.5s;
-
-    @for $i from 1 through 31 {
-      &:nth-child(#{$i})::before {
-        content: "#{$i}";
-        display: flex;
-        justify-content: center;
-        line-height: 100px;
-      }
-    }
-
-    $start-day: "mon" 0, "tue" 101px, "wed" 202px, "thu" 303px "fri" 404px,
-      "sat" 505px, "sun" 606px;
-
-    @each $day, $margin in $start-day {
-      &--#{$day}:first-child {
-        margin-left: $margin;
-      }
-    }
-
-    @for $month-length from 28 through 31 {
-      &--#{$month-length + 1} {
-        visibility: hidden;
-      }
-    }
-
-    &:hover {
-      cursor: pointer;
-      background-color: pink;
-      transform: translateY(-20px);
-    }
-  }
 }
