fix margin on the top

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .calendar {
   display: flex;
   flex-wrap: wrap;
@@ -33,5 +37,6 @@
   &__days {
     display: flex;
     flex-wrap: wrap;
+    gap: 1px;
   }
 }
