--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,52 @@
+
 body {
-  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+
+  margin: auto;
+}
+
+.calendar {
+  margin-top: 5%;
+  box-sizing: border-box;
+  border: 2px solid black;
+  width: 730px;
+
+  &__box {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1px;
+    padding: 10px;
+
+  }
+
+  &__day {
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #eee;
+    border: 1px solid black;
+    height: 100px;
+    width: 100px;
+
+    &:hover {
+      cursor: pointer;
+      background-color: pink;
+      transition: 0.5s;
+      transform: translateY(-20px);
+    }
+
+    @for $number from 1 through 31 {
+      &--date-#{$number}::before {
+        content: "#{$number}";
+
+      }
+    }
+  }
+
+  $days: mon, tue, wed, thu, fri, sat, sun;
+
 }
