--- a/src/utils/variables.scss
+++ b/src/utils/variables.scss
@@ -1,8 +1,11 @@
 $side: 100px;
 $gap: 1px;
-$columns: 7;
-$calendar-padding:10px;
-$calendar-width: $side * $columns
-  + $calendar-padding * 2 +
-  ($columns - 1) * $gap;
-$days: "mon" 1, "tue" 2, "wed" 3, "thu" 4, "fri" 5, "sat" 6, "sun" 7;
+$calendar-width: 7 * ($side + $gap);
+$weekDays:
+  mon 7,
+  tue 6,
+  wed 5,
+  thu 4,
+  fri 3,
+  sat 2,
+  sun 1;
