--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -1,3 +1,8 @@
+html {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 188%;
+}
+
 body {
   margin: initial;
 }
@@ -5,8 +10,6 @@ body {
 .calendar {
   display: flex;
   justify-content: center;
-
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   cursor: pointer;
 
   &__list {
@@ -14,11 +17,24 @@ body {
     flex-wrap: wrap;
     gap: $cell-gap;
 
-    font-size: 188%;
-
     max-width: $width-calendar;
     margin-top: 40px;
     padding: 10px;
+
+    @each $day, $num in $days-of-the-week {
+      &--start-day-#{$day} {
+        & :first-child {
+          margin-left: $cell * $num;
+        }
+      }
+    }
+
+    @for $i from 28 through 31 {
+      &--month-length-#{$i}
+      .calendar__day:nth-child(n + #{$i + 2}) {
+        visibility: hidden;
+      }
+    }
   }
 
   &__day {
@@ -43,18 +59,6 @@ body {
       &:nth-child(#{$cell-num})::before {
         content: "#{$cell-num}";
       }
-    }
-  }
-
-  @each $day, $num in $days-of-the-week {
-    &__day--#{$day}:first-child {
-      margin-left: $cell * $num;
-    }
-  }
-
-  @for $last-days from 30 to 32 {
-    &__day:nth-child(#{$last-days}) {
-      visibility: hidden;
     }
   }
 }
