--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -16,6 +16,7 @@
     border: 1px solid black;
     cursor: pointer;
     position: relative;
+    transition: transform 0.5s;
   }
 
   &__day::before {
