--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,59 @@
-body {
-  margin: 0;
+@import "./variables.scss";
+@import "./reset.scss";
+
+/* Calendar Container */
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+  width: calc(7 * #{$cell-size} + 6 * #{$border-width} + 2 * #{$cell-padding});
+}
+
+/* Calendar Cells */
+.calendar::before {
+  content: attr(data-day);
+  font-size: #{$cell-font-size};
+  font-family: #{$num-font-family};
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.calendar>* {
+  width: #{$cell-size};
+  height: #{$cell-size};
+  border: #{$border-width} solid black;
+  background-color: #{$cell-background};
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  cursor: pointer;
+}
+
+/* Day Modifiers */
+@each $day in mon,
+tue,
+wed,
+thu,
+fri,
+sat,
+sun {
+  .start-day--#{$day} {
+    margin-left: calc((#{$cell-size} + #{$border-width} + 2 * #{$cell-padding}) * index($day, mon, tue, wed, thu, fri, sat, sun) - 1);
+  }
+}
+
+/* Month Length Modifiers */
+@for $i from 28 through 31 {
+  .month-length--#{$i} {
+    &:nth-child(n + #{$i + 1}) {
+      display: none;
+    }
+  }
+}
+
+/* Hover Effect */
+.calendar>*:hover {
+  background-color: #{$cell-hover-color};
 }
