--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,6 +2,6 @@ $cell-size: 100px;
 $border-width: 1px;
 $cell-font-size: 30px;
 $cell-padding: 10px;
-$num-font-family: Arial, sans-serif;
+$num-font-family: arial, sans-serif;
 $cell-background: #eee;
 $cell-hover-color: pink;
