--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,25 +1,17 @@
 @import "./variables.scss";
 @import "./reset.scss";
 
-/* Calendar Container */
+// Calendar Container
 .calendar {
   display: flex;
   flex-wrap: wrap;
   gap: 1px;
-  width: calc(7 * #{$cell-size} + 6 * #{$border-width} + 2 * #{$cell-padding});
+  width: calc(#{$days-in-week} * #{$cell-size}
+  + (#{$days-in-week} - 1) * #{$border-width} + 2 * #{$cell-padding});
 }
 
-/* Calendar Cells */
-.calendar::before {
-  content: attr(data-day);
-  font-size: #{$cell-font-size};
-  font-family: #{$num-font-family};
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.calendar > * {
+// Calendar Cells
+.calendar__day {
   width: #{$cell-size};
   height: #{$cell-size};
   border: #{$border-width} solid black;
@@ -29,9 +21,11 @@
   justify-content: center;
   position: relative;
   cursor: pointer;
+  font-size: #{$cell-font-size};
+  font-family: #{$num-font-family};
 }
 
-/* Day Modifiers */
+// Day Modifiers
 @each $day in mon,
   tue,
   wed,
@@ -40,21 +34,54 @@
   sat,
   sun {
   .calendar__start-day--#{$day} {
-    margin-left: calc((#{$cell-size} + #{$border-width} + 2 * #{$cell-padding})
-    * index($day, mon, tue, wed, thu, fri, sat, sun) - 1);
+    .calendar__day {
+      &:nth-child(1) {
+        margin-left: 0;
+      }
+
+      &:nth-child(2) {
+        margin-left: calc(#{$cell-size}
+        + #{$border-width} + 2 * #{$cell-padding});
+      }
+
+      &:nth-child(3) {
+        margin-left: calc(2 * (#{$cell-size}
+        + #{$border-width} + 2 * #{$cell-padding}));
+      }
+
+      &:nth-child(4) {
+        margin-left: calc(3 * (#{$cell-size}
+        + #{$border-width} + 2 * #{$cell-padding}));
+      }
+
+      &:nth-child(5) {
+        margin-left: calc(4 * (#{$cell-size}
+        + #{$border-width} + 2 * #{$cell-padding}));
+      }
+
+      &:nth-child(6) {
+        margin-left: calc(5 * (#{$cell-size}
+        + #{$border-width} + 2 * #{$cell-padding}));
+      }
+
+      &:nth-child(7) {
+        margin-left: calc(6 * (#{$cell-size}
+        + #{$border-width} + 2 * #{$cell-padding}));
+      }
+    }
   }
 }
 
-/* Month Length Modifiers */
+// Month Length Modifiers
 @for $i from 28 through 31 {
   .calendar__month-length--#{$i} {
-    &:nth-child(n + #{$i + 1}) {
+    .calendar__day:nth-child(n + #{$i + 1}) {
       display: none;
     }
   }
 }
 
-/* Hover Effect */
-.calendar > *:hover {
+// Hover Effect
+.calendar__day:hover {
   background-color: #{$cell-hover-color};
 }
