--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,3 +6,4 @@ $num-font-family: arial, sans-serif;
 $cell-background: #eee;
 $cell-hover-color: pink;
 $days-in-week: 7;
+$animation-duration: 0.5s;
