--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+html {
+  display: flex;
+  justify-content: center;
+}
+
 $cellWidth: 100px;
 $cellHeight: 100px;
 $cellGap: 1px;
@@ -40,26 +45,26 @@ $days:
     background-color: pink;
     transform: translateY(-20px);
   }
-}
 
-@for $i from 1 through 31 {
-  .calendar__day:nth-child(#{$i})::before {
-    content: "#{$i}";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  @for $i from 1 through 31 {
+    &__day:nth-child(#{$i})::before {
+      content: "#{$i}";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
-}
 
-@for $i from 28 to 31 {
-  .calendar--month-length--#{$i} :nth-child(n + #{$i + 1}) {
-    visibility: hidden;
+  @each $day, $index in $days {
+    &--start-day--#{$day} &__day:first-child {
+      margin-left: (($cellWidth + $cellGap) * $index);
+    }
   }
-}
 
-@each $day, $index in $days {
-  .calendar--start-day--#{$day} .calendar__day:first-child {
-    margin-left: (($cellWidth + $cellGap) * $index);
+  @for $i from 28 to 31 {
+    &--month-length--#{$i} :nth-child(n + #{$i + 1}) {
+      visibility: hidden;
+    }
   }
 }
