--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,17 +1,34 @@
+@import "../utils/variables";
+@import "../utils/functions";
+
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  gap: 1px;
+  gap: $gap-size;
   width: 750px;
   padding: 10px;
+
+  $days: "mon" 0, "tue" 1, "wed" 2, "thu" 3, "fri" 4, "sat" 5, "sun" 6;
+
+  @each $day, $number-of-day in $days {
+    &--start-day--#{$day} .calendar__day:first-child {
+      margin-left: get-margin-size($number-of-day);
+    }
+  }
+
+  @for $length from 28 through 31 {
+    &--month-length--#{$length} .calendar__day:nth-child(n + #{$length + 1}) {
+      visibility: hidden;
+    }
+  }
 
   &__day {
     display: flex;
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
-    height: 100px;
-    width: 100px;
+    height: $square-size;
+    width: $square-size;
     border: 1px solid black;
     background-color: #eee;
     list-style-type: none;
@@ -20,21 +37,6 @@
     @for $i from 1 through 31 {
       &:nth-child(#{$i})::before {
         content: "#{$i}";
-      }
-    }
-
-    $start-day: "mon" 0, "tue" 101px, "wed" 202px, "thu" 303px, "fri" 404px,
-      "sat" 505px, "sun" 606px;
-
-    @each $day, $margin in $start-day {
-      &--#{$day}:first-child {
-        margin-left: $margin;
-      }
-    }
-
-    @for $month-length from 28 through 31 {
-      &--#{$month-length + 1} {
-        visibility: hidden;
       }
     }
 
