--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -5,6 +5,7 @@ $border-color: black;
 $gap-size: 1px;
 $month-lengths: (28, 29, 30, 31);
 $font-size: 30px;
+$transform-time: 0.5s;
 $days: (
   mon: 1,
   tue: 2,
