--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,33 @@
+@import "./variables";
+@import "./calendar";
+
 body {
+  display: flex;
+  justify-content: center;
   margin: 0;
+  margin-top: 25px;
+}
+
+@for $colum from 1 through 31 {
+  .calendar__day:nth-child(#{$colum})::before {
+    content: "#{$colum}";
+  }
+}
+
+@each $day, $number in $days {
+  .calendar--start-day-#{$day} {
+    &__day:first-child {
+      margin-left: ($day-size + $gap);
+    }
+  }
+}
+
+@for $colum from 28 through 31 {
+  .calendar--month-length--#{$colum} {
+    @for $i from ($colum + 1) through 32 {
+      .calendar__day:nth-child(#{$i}) {
+        display: none;
+      }
+    }
+  }
 }
